# gemmopt

./: README.md  gemmperf.xlsx
gflops_benchmark/: func2.S  main.c
src/HowToOptimizeGemm/: 12x8v1.c  8x8v2.c  8x8v4.c  compare_matrices.c  makefile  parameters.h  peakfma.c  random_matrix.c  test_MMult.c
src/int8conv/: 2x2i8v1.c  4x4armv7.c  4x4i8v1.c  CMakeLists.txt  GEMM2x2Micro.s  GEMM2x2Microarmv8.s  GEMM4x4Micro.s  GEMM4x4MicroV7.S  buildandroid.sh  compare_matrices.c  makefile  parameters.h  print_matrix.c  random_matrix.c  refconv.h  test_MMult.c
src/int8winograd/: 4x4i8v1.c  BGEMM_4x4.S  compare_matrices.c  copy_matrix.c  makefile  parameters.h  print_matrix.c  random_matrix.c  refconv.h  test_MMult.c  winograd22.c
src/optconv/: 12x8v1.c  12x8v2.c  12x8v3.c  8x8v1.c  8x8v3.c  8x8v5.c  8x8v6.c  gemmperf.xlsx  makefile  parameters.h  peakfma.c  refconv.h  test_MMult.c
src/optgemm/: 12x8v1.c  8x8v2.c  makefile  parameters.h  random_matrix.c
